Fix checkbox issue on mobile

--- a/src/css/study-panel.css
+++ b/src/css/study-panel.css
@@ -20,8 +20,8 @@
 }
 
 .study__checkbox {
-  -webkit-appearance: none;
-  -moz-appearance: none;
+  /* -webkit-appearance: none;
+  -moz-appearance: none; */
   vertical-align: middle;
   appearance: none;
   width: 18px;
